optimized some of the skills section and fixed weird page scrolling issue on mobile

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -89,7 +89,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1.5rem 3.5rem;
+    padding: 1.5rem 3.5rem; 
     background-color: #fbf5f2;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
     transition: top 0.3s;
@@ -116,6 +116,10 @@ nav ul {
 
 nav ul li {
     font-weight: 300;
+}
+
+.burger-menu {
+    display: none;
 }
 
 /* Hero Section */
@@ -193,7 +197,6 @@ nav ul li {
 #about-section {
     background-color: var(--secondary-color);
     padding-top: 80px;
-    min-height: 100vh;
 }
 
 .hidden-link:link {
@@ -294,7 +297,6 @@ nav ul li {
 #skills-section {
     background-color: var(--primary-color);
     padding-top: 80px;
-    min-height: 100vh;
 }
 
 .skills-wrapper img {
@@ -443,6 +445,17 @@ nav ul li {
     opacity: 1;
 }
 
+/* Future, or what's next section */
+#future-section {
+    background-color: var(--secondary-color);
+    padding-top: 80px;
+    min-height: 100vh;
+}
+
+#future-section h1 {
+    color: var(--primary-color);
+}
+
 /* Footer */
 #footer {
     height: 6em;
@@ -462,4 +475,82 @@ nav ul li {
 
 #links a:hover {
     color: #8d8d8d;
+}
+
+/* Mobile Styles */
+@media only screen and (max-width: 720px) {
+
+    html, body {
+        overflow-x: hidden;
+    }
+
+    body {
+        font-size: 16px; 
+    }
+
+    .title {
+        font-size: 150%; 
+    }
+
+    /* navigation bar */
+
+
+    /* hero section */
+    #hero-img {
+        width: 500%;
+    }
+
+    .hero-landing {
+        font-size: 120%;
+    }
+    
+    #hero-title {
+        font-size: 250%; 
+    }
+    
+    #down-arrow {
+        margin-top: 40vh; 
+    }
+
+    #about h1 {
+        font-size: 24px; 
+    }
+    
+    #coffee-pic,
+    #console {
+        width: 100%; 
+    }
+
+    .filter-button {
+        width: 50%; 
+    }
+
+    /* skills section */
+    #skills-section {
+        text-align: center;
+    }
+
+    .skills-wrapper {
+        align-items: center;
+        flex-direction: column;
+        padding: 20px;
+    }
+
+    .icon-card {
+        width: 100%;
+        margin: 10px 0;
+    }
+
+    .icon {
+        width: 50%;
+        height: auto;
+    }
+
+    #footer {
+        padding: 1rem; 
+    }
+
+    #app {
+        max-width: 100%;
+    }
 }
